<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutGameSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGameSetting"
        android:layout_width="361dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72">


        <EditText
            android:id="@+id/inputTime"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputSize"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline8" />

        <TextView
            android:id="@+id/viewTime"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="#00ACC1"
            android:text="Max Time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/inputTime"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <TextView
            android:id="@+id/viewSize"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="#F4511E"
            android:text="Board Size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/inputSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="181dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="141dp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layoutGameSettingFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:overScrollMode="ifContentScrolls"

                app:layout_constraintBottom_toTopOf="@+id/layoutGameSettingFooter"
                app:layout_constraintTop_toTopOf="@+id/scrollView"
                tools:ignore="NotSibling"
                tools:layout_editor_absoluteX="226dp">


            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGameSettingFooter"
        android:layout_width="386dp"
        android:layout_height="81dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonGameSettingsExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonGameSettingsExit"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.969" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>